--- a/src/pretrained.ipynb
+++ b/src/pretrained.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "input_1 (InputLayer)         [(None, 224, 224, 3)]     0         \n",
+      "input_3 (InputLayer)         [(None, 224, 224, 3)]     0         \n",
       "_________________________________________________________________\n",
       "block1_conv1 (Conv2D)        (None, 224, 224, 64)      1792      \n",
       "_________________________________________________________________\n",
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -478,38 +478,91 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-14-90591ffe53f4>, line 14)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-14-90591ffe53f4>\"\u001b[1;36m, line \u001b[1;32m14\u001b[0m\n\u001b[1;33m    epochs=EPOCHS,\u001b[0m\n\u001b[1;37m          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"functional_5\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "input_3 (InputLayer)         [(None, 224, 224, 3)]     0         \n",
+      "_________________________________________________________________\n",
+      "block1_conv1 (Conv2D)        (None, 224, 224, 64)      1792      \n",
+      "_________________________________________________________________\n",
+      "block1_conv2 (Conv2D)        (None, 224, 224, 64)      36928     \n",
+      "_________________________________________________________________\n",
+      "block1_pool (MaxPooling2D)   (None, 112, 112, 64)      0         \n",
+      "_________________________________________________________________\n",
+      "block2_conv1 (Conv2D)        (None, 112, 112, 128)     73856     \n",
+      "_________________________________________________________________\n",
+      "block2_conv2 (Conv2D)        (None, 112, 112, 128)     147584    \n",
+      "_________________________________________________________________\n",
+      "block2_pool (MaxPooling2D)   (None, 56, 56, 128)       0         \n",
+      "_________________________________________________________________\n",
+      "block3_conv1 (Conv2D)        (None, 56, 56, 256)       295168    \n",
+      "_________________________________________________________________\n",
+      "block3_conv2 (Conv2D)        (None, 56, 56, 256)       590080    \n",
+      "_________________________________________________________________\n",
+      "block3_conv3 (Conv2D)        (None, 56, 56, 256)       590080    \n",
+      "_________________________________________________________________\n",
+      "block3_pool (MaxPooling2D)   (None, 28, 28, 256)       0         \n",
+      "_________________________________________________________________\n",
+      "block4_conv1 (Conv2D)        (None, 28, 28, 512)       1180160   \n",
+      "_________________________________________________________________\n",
+      "block4_conv2 (Conv2D)        (None, 28, 28, 512)       2359808   \n",
+      "_________________________________________________________________\n",
+      "block4_conv3 (Conv2D)        (None, 28, 28, 512)       2359808   \n",
+      "_________________________________________________________________\n",
+      "block4_pool (MaxPooling2D)   (None, 14, 14, 512)       0         \n",
+      "_________________________________________________________________\n",
+      "block5_conv1 (Conv2D)        (None, 14, 14, 512)       2359808   \n",
+      "_________________________________________________________________\n",
+      "block5_conv2 (Conv2D)        (None, 14, 14, 512)       2359808   \n",
+      "_________________________________________________________________\n",
+      "block5_conv3 (Conv2D)        (None, 14, 14, 512)       2359808   \n",
+      "_________________________________________________________________\n",
+      "block5_pool (MaxPooling2D)   (None, 7, 7, 512)         0         \n",
+      "_________________________________________________________________\n",
+      "flatten (Flatten)            (None, 25088)             0         \n",
+      "_________________________________________________________________\n",
+      "dense (Dense)                (None, 1024)              25691136  \n",
+      "=================================================================\n",
+      "Total params: 40,405,824\n",
+      "Trainable params: 25,691,136\n",
+      "Non-trainable params: 14,714,688\n",
+      "_________________________________________________________________\n"
      ]
     }
    ],
    "source": [
-    "class_dense_svm = Dense(1024, activation='relu')(base_model.layers[-1].output)\n",
-    "output_svm = Dense(1024, activation='relu')(class_dense_svm)\n",
-    "###own layer? different way?\n",
-    "# clf = make_pipeline(output_svm, SVC(gamma='auto'))\n",
-    "\n",
-    "# # define new model\n",
-    "# ## maybe add dropout and maybe one more dense\n",
-    "# model_pretrained = Model(inputs=base_model.inputs, outputs=clf)\n",
-    "# model_pretrained.compile(optimizer='rmsprop',\n",
-    "#               loss='categorical_crossentropy',\n",
-    "#               metrics=['acc'])\n",
-    "# # summarize\n",
-    "# history_svm = model_pretrained.fit({\n",
-    "#     traindata,\n",
-    "#     epochs=EPOCHS,\n",
-    "#     steps_per_epoch=STEPS_PER_EPOCH,\n",
-    "#     validation_data=testdata,\n",
-    "#     validation_steps=VALIDATION_STEPS,\n",
-    "#     shuffle=True,\n",
-    "#     callbacks=[checkpoint, early_stopper]\n",
-    "# }\n",
-    "# )\n",
-    "# model_pretrained.summary()"
+    "flatten_svm= Flatten()(base_model.layers[-1].output)\n",
+    "# add new classifier layers\n",
+    "class_dense_svm = Dense(1024, activation='relu')(flatten_svm) ##maybe not relu...\n",
+    "model_svm = Model(inputs=base_model.input, outputs=class_dense_svm)\n",
+    "model_svm.compile(loss='categorical_crossentropy',\n",
+    "                  optimizer='rmsprop',\n",
+    "                  metrics=['acc'])\n",
+    "model_svm.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From <ipython-input-16-faa9453b5e0c>:1: Model.predict_generator (from tensorflow.python.keras.engine.training) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use Model.predict, which supports generators.\n",
+      "   10/10221 [..............................] - ETA: 9:29:18"
+     ]
+    }
+   ],
+   "source": [
+    "feature = model_svm.predict_generator(traindata,steps=10221, verbose=1)\n"
    ]
   },
   {
@@ -517,7 +570,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "### NOT TESTED- FEATURES ARE X_train\n",
+    "clf = svm.SVC(kernel='linear') # Linear Kernel\n",
+    "\n",
+    "#Train the model using the training sets\n",
+    "clf.fit(X_train, y_train)\n",
+    "\n",
+    "#Predict the response for test dataset\n",
+    "y_pred = clf.predict(X_test)"
+   ]
   }
  ],
  "metadata": {
