I guess that is how svm should look like.. now teeeeests

--- a/src/pretrained.ipynb
+++ b/src/pretrained.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "input_3 (InputLayer)         [(None, 224, 224, 3)]     0         \n",
+      "input_1 (InputLayer)         [(None, 224, 224, 3)]     0         \n",
       "_________________________________________________________________\n",
       "block1_conv1 (Conv2D)        (None, 224, 224, 64)      1792      \n",
       "_________________________________________________________________\n",
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,18 +474,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"functional_5\"\n",
+      "Model: \"functional_1\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "input_3 (InputLayer)         [(None, 224, 224, 3)]     0         \n",
+      "input_1 (InputLayer)         [(None, 224, 224, 3)]     0         \n",
       "_________________________________________________________________\n",
       "block1_conv1 (Conv2D)        (None, 224, 224, 64)      1792      \n",
       "_________________________________________________________________\n",
@@ -525,10 +525,10 @@
       "_________________________________________________________________\n",
       "flatten (Flatten)            (None, 25088)             0         \n",
       "_________________________________________________________________\n",
-      "dense (Dense)                (None, 1024)              25691136  \n",
+      "dense (Dense)                (None, 4096)              102764544 \n",
       "=================================================================\n",
-      "Total params: 40,405,824\n",
-      "Trainable params: 25,691,136\n",
+      "Total params: 117,479,232\n",
+      "Trainable params: 102,764,544\n",
       "Non-trainable params: 14,714,688\n",
       "_________________________________________________________________\n"
      ]
@@ -537,7 +537,7 @@
    "source": [
     "flatten_svm= Flatten()(base_model.layers[-1].output)\n",
     "# add new classifier layers\n",
-    "class_dense_svm = Dense(1024, activation='relu')(flatten_svm) ##maybe not relu...\n",
+    "class_dense_svm = Dense(4096, activation='relu')(flatten_svm) ##maybe not relu...\n",
     "model_svm = Model(inputs=base_model.input, outputs=class_dense_svm)\n",
     "model_svm.compile(loss='categorical_crossentropy',\n",
     "                  optimizer='rmsprop',\n",
@@ -547,30 +547,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From <ipython-input-16-faa9453b5e0c>:1: Model.predict_generator (from tensorflow.python.keras.engine.training) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Please use Model.predict, which supports generators.\n",
-      "   10/10221 [..............................] - ETA: 9:29:18"
+      "100/100 [==============================] - 427s 4s/step\n"
      ]
     }
    ],
    "source": [
-    "feature = model_svm.predict_generator(traindata,steps=10221, verbose=1)\n"
+    "feature = model_svm.predict(traindata,steps=100, verbose=1)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn import svm\n",
     "### NOT TESTED- FEATURES ARE X_train\n",
     "clf = svm.SVC(kernel='linear') # Linear Kernel\n",
     "\n",
@@ -580,6 +578,38 @@
     "#Predict the response for test dataset\n",
     "y_pred = clf.predict(X_test)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3200, 4096)\n",
+      "[[ 7.710261   0.        11.171807  ...  0.         3.632879   0.       ]\n",
+      " [ 0.         4.384882  10.506544  ... 10.336969   2.2987952 11.771685 ]\n",
+      " [ 0.         4.6307187  0.        ...  0.         0.         0.       ]\n",
+      " [ 0.         6.209863   0.        ... 11.12209    0.        10.389532 ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(feature.shape)\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(feature, traindata.labels[:3200])\n",
+    "\n",
+    "print(X_train[0:4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
