--- a/src/pretrained.ipynb
+++ b/src/pretrained.ipynb
@@ -200,9 +200,10 @@
     }
    ],
    "source": [
+    "##TO CHECK OUT- LEAVE ONLY LAST ON\n",
     "flatten= Flatten()(base_model.layers[-1].output)\n",
     "# add new classifier layers\n",
-    "class_dense = Dense(1024, activation='relu')(flatten)\n",
+    "class_dense = Dense(1024, activation='relu')(flatten) \n",
     "output = Dense(CLASSES, activation='softmax')(class_dense)\n",
     "# define new model\n",
     "## maybe add dropout and maybe one more dense\n",
@@ -474,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -547,6 +548,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1000/1000 [==============================] - 4532s 5s/step\n"
+     ]
+    }
+   ],
+   "source": [
+    "feature = model_svm.predict(traindata,steps=1000, verbose=1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [
@@ -554,26 +572,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100/100 [==============================] - 427s 4s/step\n"
+      "(32000, 4096)\n",
+      "[[ 7.9265037  0.         3.1017113 ...  0.         0.         5.950895 ]\n",
+      " [ 6.014493   0.        13.98822   ...  0.        13.785507   0.       ]\n",
+      " [ 4.6643524  0.         4.5897517 ...  4.2380953  9.463475   0.       ]\n",
+      " [ 8.930374   0.        26.290037  ...  0.         1.938708   9.443001 ]]\n"
      ]
     }
    ],
    "source": [
-    "feature = model_svm.predict(traindata,steps=100, verbose=1)\n"
+    "print(feature.shape)\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(feature, traindata.labels[:32000])\n",
+    "\n",
+    "print(X_train[0:4])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn import svm\n",
-    "### NOT TESTED- FEATURES ARE X_train\n",
-    "clf = svm.SVC(kernel='linear') # Linear Kernel\n",
+    "### NOT QUITE SURE OF IT\n",
+    "clf = svm.SVC(kernel='rbf') # choosing kernels\n",
     "\n",
     "#Train the model using the training sets\n",
-    "clf.fit(X_train, y_train)\n",
+    "clf.fit(X_train[0:1000], y_train[0:1000])\n",
     "\n",
     "#Predict the response for test dataset\n",
     "y_pred = clf.predict(X_test)"
@@ -581,27 +607,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(3200, 4096)\n",
-      "[[ 7.710261   0.        11.171807  ...  0.         3.632879   0.       ]\n",
-      " [ 0.         4.384882  10.506544  ... 10.336969   2.2987952 11.771685 ]\n",
-      " [ 0.         4.6307187  0.        ...  0.         0.         0.       ]\n",
-      " [ 0.         6.209863   0.        ... 11.12209    0.        10.389532 ]]\n"
+      "Incredible accuracy of :  0.031375\n"
      ]
     }
    ],
    "source": [
-    "print(feature.shape)\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "X_train, X_test, y_train, y_test = train_test_split(feature, traindata.labels[:3200])\n",
+    "from sklearn.metrics import accuracy_score\n",
     "\n",
-    "print(X_train[0:4])"
+    "acc = accuracy_score(y_test, y_pred)\n",
+    "\n",
+    "print(\"Incredible accuracy of : \",acc)"
    ]
   },
   {
