--- a/src/CAM.ipynb
+++ b/src/CAM.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,11 +20,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"functional_1\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "input_1 (InputLayer)         [(None, None, None, 3)]   0         \n",
+      "_________________________________________________________________\n",
+      "block1_conv1 (Conv2D)        (None, None, None, 64)    1792      \n",
+      "_________________________________________________________________\n",
+      "block1_conv2 (Conv2D)        (None, None, None, 64)    36928     \n",
+      "_________________________________________________________________\n",
+      "block1_pool (MaxPooling2D)   (None, None, None, 64)    0         \n",
+      "_________________________________________________________________\n",
+      "block2_conv1 (Conv2D)        (None, None, None, 128)   73856     \n",
+      "_________________________________________________________________\n",
+      "block2_conv2 (Conv2D)        (None, None, None, 128)   147584    \n",
+      "_________________________________________________________________\n",
+      "block2_pool (MaxPooling2D)   (None, None, None, 128)   0         \n",
+      "_________________________________________________________________\n",
+      "block3_conv1 (Conv2D)        (None, None, None, 256)   295168    \n",
+      "_________________________________________________________________\n",
+      "block3_conv2 (Conv2D)        (None, None, None, 256)   590080    \n",
+      "_________________________________________________________________\n",
+      "block3_conv3 (Conv2D)        (None, None, None, 256)   590080    \n",
+      "_________________________________________________________________\n",
+      "block3_pool (MaxPooling2D)   (None, None, None, 256)   0         \n",
+      "_________________________________________________________________\n",
+      "block4_conv1 (Conv2D)        (None, None, None, 512)   1180160   \n",
+      "_________________________________________________________________\n",
+      "block4_conv2 (Conv2D)        (None, None, None, 512)   2359808   \n",
+      "_________________________________________________________________\n",
+      "block4_conv3 (Conv2D)        (None, None, None, 512)   2359808   \n",
+      "_________________________________________________________________\n",
+      "block4_pool (MaxPooling2D)   (None, None, None, 512)   0         \n",
+      "_________________________________________________________________\n",
+      "block5_conv1 (Conv2D)        (None, None, None, 512)   2359808   \n",
+      "_________________________________________________________________\n",
+      "block5_conv2 (Conv2D)        (None, None, None, 512)   2359808   \n",
+      "_________________________________________________________________\n",
+      "block5_conv3 (Conv2D)        (None, None, None, 512)   2359808   \n",
+      "_________________________________________________________________\n",
+      "block5_pool (MaxPooling2D)   (None, None, None, 512)   0         \n",
+      "_________________________________________________________________\n",
+      "avg_pool (GlobalAveragePooli (None, 512)               0         \n",
+      "_________________________________________________________________\n",
+      "dropout (Dropout)            (None, 512)               0         \n",
+      "_________________________________________________________________\n",
+      "dense (Dense)                (None, 131)               67203     \n",
+      "=================================================================\n",
+      "Total params: 14,781,891\n",
+      "Trainable params: 14,781,891\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "model =  load_model('../models/vgg16-pretrained-rmsprop.model/')\n",
     "\n",
@@ -34,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -76,25 +135,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "None\n",
-      "none\n",
-      "block5_pool\n",
       "[[ 7  7  7 ...  3  3  3]\n",
       " [ 7  7  7 ...  3  3  3]\n",
       " [ 7  7  7 ...  3  3  3]\n",
       " ...\n",
       " [ 8  8  8 ... 13 13 13]\n",
       " [ 8  8  8 ... 13 13 13]\n",
-      " [ 8  8  8 ... 13 13 13]] (224, 224) (1, 224, 224, 3)\n",
-      "(100, 100) (100, 100, 3)\n",
-      "(100, 100, 3) (100, 100, 3)\n"
+      " [ 8  8  8 ... 13 13 13]] (224, 224) (1, 224, 224, 3)\n"
      ]
     }
    ],
@@ -111,9 +165,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# draw the predicted label on the output image\n",
     "# cv2.rectangle(output, (0, 0), (340, 40), (0, 0, 0), -1)\n",
@@ -146,18 +211,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.9"
   }
  },
  "nbformat": 4,
