--- a/src/deep_learning.ipynb
+++ b/src/deep_learning.ipynb
@@ -9,12 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "from keras.preprocessing.image import ImageDataGenerator\n",
     "import numpy as np\n",
+    "import keras\n",
     "from keras.applications.vgg16 import VGG16\n",
     "from keras.applications.vgg16 import preprocess_input\n",
     "from keras.models import Sequential, Model\n",
@@ -29,28 +30,13 @@
    "outputs": [],
    "source": [
     "EPOCHS = 50\n",
-    "BATCH_SIZE = 32\n",
+    "BATCH_SIZE = 64\n",
     "STEPS_PER_EPOCH = 32\n",
     "VALIDATION_STEPS = 64\n",
-    "MODEL_FILE = 'models/vgg16-last-conv-rmsprop.model'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Found 67692 images belonging to 131 classes.\n"
-     ]
-    }
-   ],
-   "source": [
-    "trdata_gen = ImageDataGenerator()\n",
-    "traindata = trdata_gen.flow_from_directory(directory=\"../data/Training\",target_size=(224,224)) "
+    "LEARNING_RATE = 0.001\n",
+    "MODEL_FILE = 'models/vgg16-last-conv1.model'\n",
+    "##selected classses\n",
+    "classes = [\"Lemon\", \"Raspberry\", \"Mandarine\", \"Pear 2\", \"Apple Red 1\", \"Strawberry\", \"Pomegranate\", \"Pepino\", \"Kaki\", \"Apricot\", \"Ginger Root\", \"Huckleberry\"]"
    ]
   },
   {
@@ -62,28 +48,138 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 22688 images belonging to 131 classes.\n"
+      "Found 9796 images belonging to 12 classes.\n"
      ]
     }
    ],
    "source": [
-    "tsdata_gen = ImageDataGenerator()\n",
-    "testdata = tsdata_gen.flow_from_directory(directory=\"../data/Test\", target_size=(224,224))"
+    "trdata_gen = ImageDataGenerator(1./255)\n",
+    "traindata = trdata_gen.flow_from_directory(directory=\"../data/Training\",target_size=(224,224), batch_size=1,color_mode=\"rgb\", classes=classes,class_mode=\"categorical\") "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\users\\julia\\desktop\\snr-20z-project\\env\\lib\\site-packages\\keras_preprocessing\\image\\image_data_generator.py:720: UserWarning: This ImageDataGenerator specifies `featurewise_center`, but it hasn't been fit on any training data. Fit it first by calling `.fit(numpy_data)`.\n",
+      "  warnings.warn('This ImageDataGenerator specifies '\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(9796, 224, 224, 3)\n",
+      "(9796, 12)\n"
+     ]
+    }
+   ],
+   "source": [
+    "traindata.reset()\n",
+    "x_train=np.concatenate([traindata.next()[0] for i in range(traindata.__len__())])\n",
+    "y_train=np.concatenate([traindata.next()[1] for i in range(traindata.__len__())])\n",
+    "print(x_train.shape)\n",
+    "print(y_train.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 1981 images belonging to 12 classes.\n"
+     ]
+    }
+   ],
+   "source": [
+    "tsdata_gen = ImageDataGenerator(1./255)\n",
+    "testdata = tsdata_gen.flow_from_directory(directory=\"../data/Test\", target_size=(224,224), batch_size=1,color_mode=\"rgb\", classes=classes,class_mode=\"categorical\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1981, 224, 224, 3)\n",
+      "(1981, 12)\n"
+     ]
+    }
+   ],
+   "source": [
+    "testdata.reset()\n",
+    "x_test=np.concatenate([testdata.next()[0] for i in range(testdata.__len__())])\n",
+    "y_test=np.concatenate([testdata.next()[1] for i in range(testdata.__len__())])\n",
+    "print(x_test.shape)\n",
+    "print(y_test.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 1735 images belonging to 12 classes.\n"
+     ]
+    }
+   ],
+   "source": [
+    "valdata_gen = ImageDataGenerator(1./255)\n",
+    "valdata = tsdata_gen.flow_from_directory(directory=\"../data/Validation\", target_size=(224,224), batch_size=1,color_mode=\"rgb\", classes=classes,class_mode=\"categorical\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1735, 224, 224, 3)\n",
+      "(1735, 12)\n"
+     ]
+    }
+   ],
    "source": [
-    "#CLASSES = len(traindata.class_indices)\n",
-    "CLASSES = 131"
+    "valdata.reset()\n",
+    "x_val=np.concatenate([valdata.next()[0] for i in range(valdata.__len__())])\n",
+    "y_val=np.concatenate([valdata.next()[1] for i in range(valdata.__len__())])\n",
+    "print(x_val.shape)\n",
+    "print(y_val.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CLASSES = len(traindata.class_indices)\n",
+    "# CLASSES = 131"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +190,7 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "input_3 (InputLayer)         [(None, 224, 224, 3)]     0         \n",
+      "input_1 (InputLayer)         [(None, 224, 224, 3)]     0         \n",
       "_________________________________________________________________\n",
       "block1_conv1 (Conv2D)        (None, 224, 224, 64)      1792      \n",
       "_________________________________________________________________\n",
@@ -147,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +266,7 @@
     }
    ],
    "source": [
-    "checkpoint = ModelCheckpoint(\"vgg16_1_pretrained.h5\", monitor='val_acc', verbose=1, save_best_only=True, save_weights_only=False, mode='auto', period=1)\n",
+    "checkpoint = ModelCheckpoint(\"vgg16_conv_pretrained1.h5\", monitor='val_acc', verbose=1, save_best_only=True, save_weights_only=False, mode='auto', period=1)\n",
     "early_stopper = EarlyStopping(monitor='val_acc', min_delta=0.001, patience=20, verbose=1, mode='auto')"
    ]
   },
@@ -183,18 +279,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"functional_3\"\n",
+      "Model: \"model\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "input_3 (InputLayer)         [(None, 224, 224, 3)]     0         \n",
+      "input_1 (InputLayer)         [(None, 224, 224, 3)]     0         \n",
       "_________________________________________________________________\n",
       "block1_conv1 (Conv2D)        (None, 224, 224, 64)      1792      \n",
       "_________________________________________________________________\n",
@@ -232,12 +328,16 @@
       "_________________________________________________________________\n",
       "block5_pool (MaxPooling2D)   (None, 7, 7, 512)         0         \n",
       "_________________________________________________________________\n",
-      "flatten_2 (Flatten)          (None, 25088)             0         \n",
+      "flatten (Flatten)            (None, 25088)             0         \n",
       "_________________________________________________________________\n",
-      "dense_1 (Dense)              (None, 131)               3286659   \n",
+      "dense (Dense)                (None, 4096)              102764544 \n",
+      "_________________________________________________________________\n",
+      "dense_1 (Dense)              (None, 4096)              16781312  \n",
+      "_________________________________________________________________\n",
+      "dense_2 (Dense)              (None, 12)                49164     \n",
       "=================================================================\n",
-      "Total params: 18,001,347\n",
-      "Trainable params: 3,286,659\n",
+      "Total params: 134,309,708\n",
+      "Trainable params: 119,595,020\n",
       "Non-trainable params: 14,714,688\n",
       "_________________________________________________________________\n"
      ]
@@ -246,8 +346,10 @@
    "source": [
     "last_conv_flat = Flatten()(base_model.layers[-1].output)\n",
     "# # add new classifier layers\n",
-    "# class_dense_flat = Dense(1024, activation='relu')(last_conv_flat) -what about this\n",
-    "output = Dense(CLASSES, activation='softmax')(last_conv_flat)\n",
+    "class_dense_flat1 = Dense(4096, activation='relu')(last_conv_flat) \n",
+    "class_dense_flat2 = Dense(4096, activation='relu')(class_dense_flat1) \n",
+    "# -what about this\n",
+    "output = Dense(CLASSES, activation='softmax')(class_dense_flat2 )\n",
     "# define new model\n",
     "## maybe add dropout and maybe one more dense\n",
     "last_conv_model = Model(inputs=base_model.inputs, outputs=output)\n",
@@ -257,18 +359,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"functional_3\"\n",
+      "Model: \"model\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "input_3 (InputLayer)         [(None, 224, 224, 3)]     0         \n",
+      "input_1 (InputLayer)         [(None, 224, 224, 3)]     0         \n",
       "_________________________________________________________________\n",
       "block1_conv1 (Conv2D)        (None, 224, 224, 64)      1792      \n",
       "_________________________________________________________________\n",
@@ -306,58 +408,16 @@
       "_________________________________________________________________\n",
       "block5_pool (MaxPooling2D)   (None, 7, 7, 512)         0         \n",
       "_________________________________________________________________\n",
-      "flatten_2 (Flatten)          (None, 25088)             0         \n",
+      "flatten (Flatten)            (None, 25088)             0         \n",
       "_________________________________________________________________\n",
-      "dense_1 (Dense)              (None, 131)               3286659   \n",
+      "dense (Dense)                (None, 4096)              102764544 \n",
+      "_________________________________________________________________\n",
+      "dense_1 (Dense)              (None, 4096)              16781312  \n",
+      "_________________________________________________________________\n",
+      "dense_2 (Dense)              (None, 12)                49164     \n",
       "=================================================================\n",
-      "Total params: 18,001,347\n",
-      "Trainable params: 5,646,467\n",
-      "Non-trainable params: 12,354,880\n",
-      "_________________________________________________________________\n",
-      "Model: \"vgg16\"\n",
-      "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
-      "=================================================================\n",
-      "input_3 (InputLayer)         [(None, 224, 224, 3)]     0         \n",
-      "_________________________________________________________________\n",
-      "block1_conv1 (Conv2D)        (None, 224, 224, 64)      1792      \n",
-      "_________________________________________________________________\n",
-      "block1_conv2 (Conv2D)        (None, 224, 224, 64)      36928     \n",
-      "_________________________________________________________________\n",
-      "block1_pool (MaxPooling2D)   (None, 112, 112, 64)      0         \n",
-      "_________________________________________________________________\n",
-      "block2_conv1 (Conv2D)        (None, 112, 112, 128)     73856     \n",
-      "_________________________________________________________________\n",
-      "block2_conv2 (Conv2D)        (None, 112, 112, 128)     147584    \n",
-      "_________________________________________________________________\n",
-      "block2_pool (MaxPooling2D)   (None, 56, 56, 128)       0         \n",
-      "_________________________________________________________________\n",
-      "block3_conv1 (Conv2D)        (None, 56, 56, 256)       295168    \n",
-      "_________________________________________________________________\n",
-      "block3_conv2 (Conv2D)        (None, 56, 56, 256)       590080    \n",
-      "_________________________________________________________________\n",
-      "block3_conv3 (Conv2D)        (None, 56, 56, 256)       590080    \n",
-      "_________________________________________________________________\n",
-      "block3_pool (MaxPooling2D)   (None, 28, 28, 256)       0         \n",
-      "_________________________________________________________________\n",
-      "block4_conv1 (Conv2D)        (None, 28, 28, 512)       1180160   \n",
-      "_________________________________________________________________\n",
-      "block4_conv2 (Conv2D)        (None, 28, 28, 512)       2359808   \n",
-      "_________________________________________________________________\n",
-      "block4_conv3 (Conv2D)        (None, 28, 28, 512)       2359808   \n",
-      "_________________________________________________________________\n",
-      "block4_pool (MaxPooling2D)   (None, 14, 14, 512)       0         \n",
-      "_________________________________________________________________\n",
-      "block5_conv1 (Conv2D)        (None, 14, 14, 512)       2359808   \n",
-      "_________________________________________________________________\n",
-      "block5_conv2 (Conv2D)        (None, 14, 14, 512)       2359808   \n",
-      "_________________________________________________________________\n",
-      "block5_conv3 (Conv2D)        (None, 14, 14, 512)       2359808   \n",
-      "_________________________________________________________________\n",
-      "block5_pool (MaxPooling2D)   (None, 7, 7, 512)         0         \n",
-      "=================================================================\n",
-      "Total params: 14,714,688\n",
-      "Trainable params: 2,359,808\n",
+      "Total params: 134,309,708\n",
+      "Trainable params: 121,954,828\n",
       "Non-trainable params: 12,354,880\n",
       "_________________________________________________________________\n"
      ]
@@ -370,6 +430,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9796\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(traindata))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "opt = keras.optimizers.RMSprop(\n",
+    "    learning_rate=LEARNING_RATE,\n",
+    "    rho=0.9,\n",
+    "    momentum=0.0,\n",
+    "    epsilon=1e-07,\n",
+    "    centered=False,\n",
+    "    name=\"RMSprop\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [
@@ -378,30 +471,58 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/50\n",
-      "32/32 [==============================] - ETA: 0s - loss: 8.9344 - acc: 0.0527\n",
-      "Epoch 00001: val_acc improved from -inf to 0.07910, saving model to vgg16_1_pretrained.h5\n",
-      "32/32 [==============================] - 545s 17s/step - loss: 8.9344 - acc: 0.0527 - val_loss: 4.4004 - val_acc: 0.0791\n",
-      "Epoch 2/50\n",
-      "26/32 [=======================>......] - ETA: 52s - loss: 4.2331 - acc: 0.1310 "
+      " 39/153 [======>.......................] - ETA: 1:45 - loss: 1225.5162 - acc: 0.0142"
      ]
     }
    ],
    "source": [
     "last_conv_model.compile(loss='categorical_crossentropy',\n",
-    "                  optimizer='rmsprop',\n",
+    "                  optimizer=opt,\n",
     "                  metrics=['acc'])\n",
     "last_conv_model_history = last_conv_model.fit(\n",
     "    traindata,\n",
     "    epochs=EPOCHS,\n",
-    "    steps_per_epoch=STEPS_PER_EPOCH,\n",
-    "    validation_data=testdata,\n",
-    "    validation_steps=VALIDATION_STEPS,\n",
+    "    batch_size=BATCH_SIZE,\n",
+    "    steps_per_epoch=len(traindata)/BATCH_SIZE,\n",
+    "    validation_steps=len(valdata)//BATCH_SIZE,\n",
+    "    validation_data=valdata,\n",
     "    shuffle=True,\n",
     "    callbacks=[checkpoint, early_stopper]\n",
     ")\n",
     "\n",
     "\n",
     "model.save(MODEL_FILE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(history.history.keys())\n",
+    "plt.plot(history_pretrained.history['acc'])\n",
+    "plt.plot(history_pretrained.history['val_acc'])\n",
+    "plt.title('model accuracy')\n",
+    "plt.ylabel('accuracy')\n",
+    "plt.xlabel('epoch')\n",
+    "plt.legend(['train', 'test'], loc='upper left')\n",
+    "plt.savefig('acc_training_process_last_conv.png')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred_train = model.predict(x_train)\n",
+    "y_pred_test = model.predict(x_test)\n",
+    "y_pred_val = model.predict(x_val)\n",
+    "print(sklearn.metrics.classification_report(y_train, y_pred_train))\n",
+    "print(sklearn.metrics.classification_report(y_test, y_pred_test)\n",
+    "print(sklearn.metrics.classification_report(y_val, y_pred_val))\n"
    ]
   },
   {
@@ -617,7 +738,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.7"
   }
  },
  "nbformat": 4,
