--- a/src/pretrained.ipynb
+++ b/src/pretrained.ipynb
@@ -1076,6 +1076,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1981, 25088)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_test.shape\n",
+    "X_test.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
    "outputs": [],
@@ -1142,9 +1163,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[LibSVM]"
+     ]
+    }
+   ],
    "source": [
     "svm_linear = svm.SVC(kernel='linear',C=100, verbose=2)\n",
     "svm_linear.fit(X_train, y_train)\n",
@@ -1154,11 +1183,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      1.00      1.00       767\n",
+      "           1       1.00      1.00      1.00       769\n",
+      "           2       1.00      1.00      1.00       764\n",
+      "           3       1.00      1.00      1.00       772\n",
+      "           4       1.00      1.00      1.00       774\n",
+      "           5       1.00      1.00      1.00       754\n",
+      "           6       1.00      1.00      1.00       793\n",
+      "           7       1.00      1.00      1.00       765\n",
+      "           8       1.00      1.00      1.00       771\n",
+      "           9       1.00      1.00      1.00       750\n",
+      "          10       1.00      1.00      1.00       766\n",
+      "          11       1.00      1.00      1.00       779\n",
+      "\n",
+      "    accuracy                           1.00      9224\n",
+      "   macro avg       1.00      1.00      1.00      9224\n",
+      "weighted avg       1.00      1.00      1.00      9224\n",
+      "\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.09      0.15      0.11       164\n",
+      "           1       0.07      0.08      0.07       166\n",
+      "           2       0.06      0.06      0.06       166\n",
+      "           3       0.15      0.15      0.15       232\n",
+      "           4       0.11      0.09      0.10       164\n",
+      "           5       0.07      0.08      0.08       164\n",
+      "           6       0.07      0.07      0.07       164\n",
+      "           7       0.07      0.08      0.08       166\n",
+      "           8       0.07      0.05      0.06       166\n",
+      "           9       0.08      0.07      0.07       164\n",
+      "          10       0.06      0.06      0.06        99\n",
+      "          11       0.07      0.04      0.05       166\n",
+      "\n",
+      "    accuracy                           0.08      1981\n",
+      "   macro avg       0.08      0.08      0.08      1981\n",
+      "weighted avg       0.08      0.08      0.08      1981\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(sklearn.metrics.classification_report(y_train, y_pred_train_lin))\n",
     "print(sklearn.metrics.classification_report(y_test, y_pred_test_lin))"
@@ -1166,9 +1240,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[LibSVM]              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.83      0.85      0.84       767\n",
+      "           1       0.78      0.84      0.81       769\n",
+      "           2       0.82      0.84      0.83       764\n",
+      "           3       0.83      0.84      0.83       772\n",
+      "           4       0.82      0.84      0.83       774\n",
+      "           5       0.85      0.83      0.84       754\n",
+      "           6       0.85      0.83      0.84       793\n",
+      "           7       0.84      0.81      0.82       765\n",
+      "           8       0.86      0.83      0.84       771\n",
+      "           9       0.83      0.83      0.83       750\n",
+      "          10       0.84      0.81      0.82       766\n",
+      "          11       0.83      0.84      0.84       779\n",
+      "\n",
+      "    accuracy                           0.83      9224\n",
+      "   macro avg       0.83      0.83      0.83      9224\n",
+      "weighted avg       0.83      0.83      0.83      9224\n",
+      "\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.08      0.16      0.11       164\n",
+      "           1       0.06      0.06      0.06       166\n",
+      "           2       0.07      0.07      0.07       166\n",
+      "           3       0.13      0.11      0.12       232\n",
+      "           4       0.13      0.10      0.11       164\n",
+      "           5       0.07      0.07      0.07       164\n",
+      "           6       0.10      0.09      0.10       164\n",
+      "           7       0.11      0.13      0.12       166\n",
+      "           8       0.09      0.08      0.08       166\n",
+      "           9       0.10      0.07      0.08       164\n",
+      "          10       0.05      0.07      0.06        99\n",
+      "          11       0.10      0.07      0.08       166\n",
+      "\n",
+      "    accuracy                           0.09      1981\n",
+      "   macro avg       0.09      0.09      0.09      1981\n",
+      "weighted avg       0.09      0.09      0.09      1981\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "svm_poly = svm.SVC(kernel='poly',C= 100, degree=2, verbose=2)\n",
     "svm_poly.fit(X_train, y_train)\n",
